gcc/testsuite/g++.dg/cpp0x/auto11.C
// PR c++/38256
// { dg-options "-std=c++11" }

template<int> struct A
{
  template<typename T> operator T();
};

void foo()
{
  A<0>().operator auto();	// { dg-error "auto.*conversion" }
}
